--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jbuchanan89/chappynest-2/issues"
   },
-  "homepage": "https://github.com/jbuchanan89/chappynest-2#readme"
+  "homepage": "https://github.com/jbuchanan89/chappynest-2#readme",
+  "dependencies": {
+    "node": "^9.3.0"
+  }
 }
