--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "bcryptjs": "^2.4.3",
+    "moment": "^2.20.0",
+    "react": "^16.1.1",
+    "react-browser-router": "^2.0.3",
+    "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
