--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "moment": "^2.20.0",
-    "react": "^16.1.1",
+    "moment": "^2.20.1",
+    "react": "^16.2.0",
     "react-browser-router": "^2.0.3",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "^1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
