--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "proxy": "process.env.API_BASE_URL",
+  "proxy": "https://process.env.API_BASE_URL",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
